compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_ty_from_alias_function.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type sha : function (a : int, b : char) : int"
---
"sha"@(FileId(1), 5..8) [Type]: alias[DefId(LibraryId(0), LocalDefId(0))] of function ( pass(value) int, pass(value) char, ) -> int
"a"@(FileId(1), 21..22) [Param(Value, No)]: <error>
"b"@(FileId(1), 30..31) [Param(Value, No)]: <error>
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

