compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_ty_from_function.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "function sha(a : int, b : char) : int end sha"
---
"sha"@"src/main.t:9..12" [Subprogram(Function)]: function ( pass(value) int, pass(value) char, ) -> int
"a"@"src/main.t:13..14" [Param(Value, No)]: int
"b"@"src/main.t:22..23" [Param(Value, No)]: char
"<unnamed>"@"<unknown>:0..0" [Undeclared]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
