compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_ty_from_process.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "process sha(a : int, b : char) end sha"
---
"sha"@(FileId(1), 8..11) [Subprogram(Process)]: process ( pass(value) int, pass(value) char, ) -> void
"a"@(FileId(1), 12..13) [Param(Value, No)]: int
"b"@(FileId(1), 21..22) [Param(Value, No)]: char
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

