compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_type_alias_normal.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type a : int var _ : a"
---
"a"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of int
"_"@(FileId(1), 17..18) [ConstVar(Var, No)]: alias[DefId(PackageId(0), LocalDefId(0))] of int
"<root>"@(dummy) [Module(No)]: <error>

