compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_undecl_def_in_lvalue.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "undecl := 1"
---
"<root>"@(dummy) [Module(No)]: <error>

