compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_undecl_def_in_rvalue.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var lvalue := undecl"
---
"lvalue"@"src/main.t:4..10" [ConstVar(Var, No)]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
