compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_var_compatible.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var k : int := 100"
---
"k"@"src/main.t:4..5" [ConstVar(Var, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
