compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__var_decl_inference-2.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var k := 'oe'"
---
"k"@(FileId(1), 4..5) [ConstVar(Var, No)]: char_n Fixed(Value(Integer(ConstInt { magnitude: 2, sign: Positive, width: As32 })))
"<root>"@(dummy) [Module(No)]: <error>

