compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__var_decl_inference-3.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var k := 'o'"
---
"k"@"src/main.t:4..5" [ConstVar(Var, No)]: char
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
