compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__var_decl_inference.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var k := \"oeuf\""
---
"k"@(FileId(1), 4..5) [ConstVar(Var, No)]: string
"<root>"@(dummy) [Module(No)]: <error>

